fix z-index position values on screen

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -205,7 +205,7 @@ section {
   color: #fff;
   border: none;
   cursor: pointer;
-  z-index: 1000;
+  z-index: 99999;
   transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
